compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__concat_with_block_with_single_string_expr.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn concat(name) {\n  name <> { \"/\" } <> name\n}\n"
---
----- SOURCE CODE

pub fn concat(name) {
  name <> { "/" } <> name
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([concat/1]).

-spec concat(binary()) -> binary().
concat(Name) ->
    <<<<Name/binary, "/"/utf8>>/binary, Name/binary>>.
