compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__escape_u_1.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 274
expression: "\npub fn main() {\n  \"\\u{1f600}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function]).

-export([main/0]).

-spec main() -> binary().
main() ->
    <<"\x{1f600}"/utf8>>.

