compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__escape_u_2.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 285
expression: "\npub fn main() {\n  \"Hello \\u{1f600}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function]).

-export([main/0]).

-spec main() -> binary().
main() ->
    <<"Hello \x{1f600}"/utf8>>.

