compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__not_unicode_escape_sequence2.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn not_unicode_escape_sequence() -> String {\n  \"\\\\\\\\u{03a9}\"\n}\n"
---
----- SOURCE CODE

pub fn not_unicode_escape_sequence() -> String {
  "\\\\u{03a9}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([not_unicode_escape_sequence/0]).

-spec not_unicode_escape_sequence() -> binary().
not_unicode_escape_sequence() ->
    ~"\\\\u{03a9}".
